# CrewDock

./: .gitignore  CrewDock_PRD_v1.0.docx  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: windows-build.yml
docs/: codex-plan.md  crewdock-strategic-analysis.md  crewdock-working-reference.md  developer-guide.md  module-architecture-reference.md  posthog-telemetry.md  release-checklist.md  why-we-built-crewdock.md  window-workspace-transition.md
docs/releases/: v0.1.0.md  v0.1.1.md
scripts/: build-macos-dmg.sh  run-dev.sh  run-macos-dev-app.sh  sync-xterm-assets.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  persistence.rs  session_manager.rs  source_control.rs  telemetry.rs  workspace_manager.rs
src-web/: activity-rail.js  app.js  bridge.js  index.html  launcher-particles.js  launcher.js  store.js  styles.css  workspace-strip.js
