[package]
name = "crewdock"
version = "0.1.0"
description = "CrewDock MVP architecture spike"
edition = "2021"

[lib]
name = "crewdock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
portable-pty = "0.8.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2.5.0"
